# split-our-bills-bot

./: .gitignore  README.md  main.py  makefile  persistance.py  pyproject.toml  test_main.py  watcher.py
