[project]
name = "split-our-bills-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "iacobucci",email = "iacobuccivalerio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pysqlite3 (>=0.5.4,<0.6.0)",
    "telethon (>=1.39.0,<2.0.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "termcolor (>=2.5.0,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
watchdog = "^4.0.0"

[tool.poetry.scripts]
dev = "watchdog_config:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
